--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "sharp": "^0.33.5",
     "temp": "^0.9.4",
