--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/server.js"  // يمكنك تشغيل التطوير محليًا باستخدام هذا السكربت
+    "dev": "nodemon api/server.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.1",
